--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ h1 {
   margin: 0;
   padding-bottom: 40px;
   color: white;
+  font-size: 58px;
 }
 
 select {
@@ -22,11 +23,52 @@ select {
   margin: 0px auto;
   background-color: #4db56f;
   width: 20%;
-  font-size: 18px;
-  border-radius: 8px;
+  font-size: 22px;
+  border-radius: 25px;
   padding: 10px;
   border: 1px solid white;
   font-family: "Figtree", sans-serif;
   font-size: 15px;
   color: white;
+}
+
+main {
+  margin: 40px auto;
+}
+.city-card {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  background-color: white;
+  margin: 15px auto;
+  padding: 15px;
+  max-width: 400px;
+  border-radius: 65px;
+  font-size: 25px;
+  font-weight: 700;
+}
+
+.date {
+  text-align: center;
+  background-color: #4db56f;
+  margin: 0;
+  padding: 25px;
+  border-radius: 66px;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 17px;
+}
+
+.city-name {
+  font-size: 26px;
+  font-weight: 600;
+}
+
+.time {
+  position: relative;
+  top: 1px;
+  font-size: 28px;
+  font-weight: 400;
+  padding-right: 20px;
 }
