--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,18 @@ main {
   font-weight: 400;
   padding-right: 20px;
 }
+
+footer {
+  color: black;
+  font-size: 13px;
+  text-align: center;
+  width: 100%;
+  height: 30px;
+  position: absolute;
+  bottom: -140px;
+}
+
+a {
+  color: #4db56f;
+  font-weight: 700;
+}
