--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,7 @@ main {
   border-radius: 65px;
   font-size: 25px;
   font-weight: 700;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .date {
