--- a/css/style.css
+++ b/css/style.css
@@ -28,22 +28,23 @@ select {
   padding: 10px;
   border: 1px solid white;
   font-family: "Figtree", sans-serif;
-  font-size: 15px;
+  font-size: 18px;
+  font-weight: 400;
   color: white;
 }
 
 main {
   margin: 40px auto;
 }
-.city-card {
+.city-container {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   background-color: white;
   margin: 15px auto;
-  padding: 15px;
-  max-width: 400px;
+  padding: 12px;
+  max-width: 450px;
   border-radius: 65px;
   font-size: 25px;
   font-weight: 700;
@@ -54,24 +55,26 @@ main {
   text-align: center;
   background-color: #4db56f;
   margin: 0;
-  padding: 25px;
+  padding: 23px;
   border-radius: 66px;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 17px;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 16px;
+  text-transform: uppercase;
+  width: 31px;
+  height: 31px;
 }
 
 .city-name {
   font-size: 26px;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 .time {
-  position: relative;
-  top: 1px;
-  font-size: 28px;
-  font-weight: 400;
-  padding-right: 20px;
+  font-size: 32px;
+  font-weight: 500;
+  padding-right: 13px;
+  width: 124px;
 }
 
 footer {
